--- a/Homework 07/createTb.ipynb
+++ b/Homework 07/createTb.ipynb
@@ -133,7 +133,7 @@
                 "    UserID INT IDENTITY(1,1) PRIMARY KEY,\n",
                 "    Gender CHAR(6) NOT NULL,\n",
                 "    Country CHAR(25) NOT NULL,\n",
-                "    Username CHAR(64) NOT NULL,\n",
+                "    Username CHAR(64) NOT NULL UNIQUE,\n",
                 "    \"Password\" CHAR(64) NOT NULL\n",
                 ")"
             ],
@@ -157,7 +157,7 @@
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 1
         },
         {
             "cell_type": "code",
@@ -173,21 +173,37 @@
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
+                    "output_type": "error",
+                    "evalue": "Msg 1767, Level 16, State 0, Line 1\nForeign key 'FK__Like__MovieID__15702A09' references invalid table 'Movie'.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 1750, Level 16, State 1, Line 1\nCould not create constraint or index. See previous errors.",
+                    "ename": "",
+                    "traceback": []
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.004"
+                        "text/html": "Total execution time: 00:00:00.005"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 2
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "CREATE UNIQUE INDEX UserLikeCK ON \"Like\"(UserID,MovieID)"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "df1d5e17-f77c-4c15-88f8-8f2c5ef9690d"
+            },
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
