--- a/Homework 07/Sql_Script/task4-test.ipynb
+++ b/Homework 07/Sql_Script/task4-test.ipynb
@@ -19,8 +19,7 @@
                 "SELECT * FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes'"
             ],
             "metadata": {
-                "azdata_cell_guid": "a0af2a05-bf69-4fe5-8e8b-657bbfad816e",
-                "tags": []
+                "azdata_cell_guid": "fac77580-b44b-4abb-8e51-e434224f6190"
             },
             "outputs": [
                 {
@@ -40,7 +39,7 @@
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 53,
+                    "execution_count": 17,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -79,16 +78,82 @@
                     }
                 }
             ],
-            "execution_count": 53
+            "execution_count": 17
         },
         {
             "cell_type": "code",
             "source": [
-                "SELECT * FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no'"
+                "SELECT UserID , MovieID FROM [Like] WHERE MovieID IN (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes') AND UserID != 1"
             ],
             "metadata": {
-                "azdata_cell_guid": "d68ded73-4524-44d5-97ce-42e7944614ee",
-                "tags": []
+                "azdata_cell_guid": "b454162a-c8e2-44d9-a42d-327c2fc1630e"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(3 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.006"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 12,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "UserID"
+                                    },
+                                    {
+                                        "name": "MovieID"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "0": "3",
+                                    "1": "1"
+                                },
+                                {
+                                    "0": "3",
+                                    "1": "2"
+                                },
+                                {
+                                    "0": "5",
+                                    "1": "1"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>UserID</th><th>MovieID</th></tr>",
+                            "<tr><td>3</td><td>1</td></tr>",
+                            "<tr><td>3</td><td>2</td></tr>",
+                            "<tr><td>5</td><td>1</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 12
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 1 UserID FROM [Like] WHERE MovieID IN (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes') AND UserID != 1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(*) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes')"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "4b6b22f2-8585-4aea-a89c-b23043ba0800"
             },
             "outputs": [
                 {
@@ -101,14 +166,67 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.004"
+                        "text/html": "Total execution time: 00:00:00.012"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 54,
+                    "execution_count": 28,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "UserID"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "0": "3"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>UserID</th></tr>",
+                            "<tr><td>3</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 28
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT * FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no'"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "0ce8340f-3623-48b9-8233-3115f3979dba"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(2 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.002"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 19,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -129,6 +247,11 @@
                                     "0": "1",
                                     "1": "5",
                                     "2": "no "
+                                },
+                                {
+                                    "0": "1",
+                                    "1": "20",
+                                    "2": "no "
                                 }
                             ]
                         },
@@ -136,21 +259,21 @@
                             "<table>",
                             "<tr><th>UserID</th><th>MovieID</th><th>LikeOrDislike</th></tr>",
                             "<tr><td>1</td><td>5</td><td>no </td></tr>",
+                            "<tr><td>1</td><td>20</td><td>no </td></tr>",
                             "</table>"
                         ]
                     }
                 }
             ],
-            "execution_count": 54
+            "execution_count": 19
         },
         {
             "cell_type": "code",
             "source": [
-                "SELECT TOP 3 UserID, COUNT(UserID) FROM [Like] WHERE MovieID in (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike='yes') AND UserID !=1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(UserID) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes')"
+                "SELECT TOP 1 UserID FROM [Like] WHERE MovieID IN (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no') AND UserID != 1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(*) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no')"
             ],
             "metadata": {
-                "azdata_cell_guid": "eeaef34f-40d3-4877-90ef-cdbf1a7c07a4",
-                "tags": []
+                "azdata_cell_guid": "1062cd90-62b7-45de-a75a-e5fe2a66f45c"
             },
             "outputs": [
                 {
@@ -163,134 +286,67 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.013"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 55,
+                    "execution_count": 33,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
                                 "fields": [
                                     {
                                         "name": "UserID"
-                                    },
-                                    {
-                                        "name": "(No column name)"
                                     }
                                 ]
                             },
                             "data": [
                                 {
-                                    "0": "3",
-                                    "1": "2"
+                                    "0": "3"
                                 }
                             ]
                         },
                         "text/html": [
                             "<table>",
-                            "<tr><th>UserID</th><th>(No column name)</th></tr>",
-                            "<tr><td>3</td><td>2</td></tr>",
+                            "<tr><th>UserID</th></tr>",
+                            "<tr><td>3</td></tr>",
                             "</table>"
                         ]
                     }
                 }
             ],
-            "execution_count": 55
+            "execution_count": 33
         },
         {
             "cell_type": "code",
             "source": [
-                "SELECT TOP 3 UserID, COUNT(UserID) FROM [Like] WHERE MovieID in (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike='no') AND UserID !=1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(UserID) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no')"
+                "SELECT Title FROM Movie INNER JOIN [Like] ON [Like].MovieID = Movie.MovieID WHERE UserID = (SELECT TOP 1 UserID FROM [Like] WHERE MovieID IN (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes') AND UserID != 1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(*) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes')) AND UserID = (SELECT TOP 1 UserID FROM [Like] WHERE MovieID IN (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no') AND UserID != 1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(*) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no')) AND LikeOrDislike != 'no'"
             ],
             "metadata": {
-                "azdata_cell_guid": "d7727fe4-fc38-414f-9251-cbe01ee8b448",
-                "tags": []
+                "azdata_cell_guid": "37a9419c-5c29-425e-814a-d1de5590e63b"
             },
             "outputs": [
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "(2 rows affected)"
+                        "text/html": "(4 rows affected)"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.001"
+                        "text/html": "Total execution time: 00:00:00.021"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 56,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "UserID"
-                                    },
-                                    {
-                                        "name": "(No column name)"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "0": "3",
-                                    "1": "1"
-                                },
-                                {
-                                    "0": "5",
-                                    "1": "1"
-                                }
-                            ]
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>UserID</th><th>(No column name)</th></tr>",
-                            "<tr><td>3</td><td>1</td></tr>",
-                            "<tr><td>5</td><td>1</td></tr>",
-                            "</table>"
-                        ]
-                    }
-                }
-            ],
-            "execution_count": 56
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "SELECT Title FROM Movie INNER JOIN [Like] ON [Like].MovieID = Movie.MovieID WHERE UserID = (SELECT TOP 1 UserID FROM [Like] WHERE MovieID in (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike='yes') AND UserID !=1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(UserID) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'yes')) AND UserID = (SELECT TOP 1 UserID FROM [Like] WHERE MovieID in (SELECT MovieID FROM [Like] WHERE UserID=1 AND LikeOrDislike='no') AND UserID !=1 GROUP BY UserID HAVING COUNT(UserID) = (SELECT COUNT(UserID) FROM [Like] WHERE UserID=1 AND LikeOrDislike = 'no')) AND [Like].MovieID NOT IN (SELECT MovieID FROM [Like] WHERE UserID=1)"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "1b5ca3da-20b9-4ddb-bf2f-57d58b7a6daf"
-            },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(3 rows affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.019"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 60,
+                    "execution_count": 32,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -302,7 +358,10 @@
                             },
                             "data": [
                                 {
-                                    "0": "American Dad!                                     "
+                                    "0": "Mortal Kombat Legends: Scorpion's Revenge         "
+                                },
+                                {
+                                    "0": "Scooby-Doo: Return to Zombie Island               "
                                 },
                                 {
                                     "0": "Tenet                                             "
@@ -315,7 +374,8 @@
                         "text/html": [
                             "<table>",
                             "<tr><th>Title</th></tr>",
-                            "<tr><td>American Dad!                                     </td></tr>",
+                            "<tr><td>Mortal Kombat Legends: Scorpion's Revenge         </td></tr>",
+                            "<tr><td>Scooby-Doo: Return to Zombie Island               </td></tr>",
                             "<tr><td>Tenet                                             </td></tr>",
                             "<tr><td>Memento                                           </td></tr>",
                             "</table>"
@@ -323,7 +383,7 @@
                     }
                 }
             ],
-            "execution_count": 60
+            "execution_count": 32
         }
     ]
 }
